changes to html files

--- a/templates/tfa_failure.html
+++ b/templates/tfa_failure.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Two Factor Authentication Failed</title>
+    <title>Two-Factor Authentication Failed</title>
 </head>
 <body>
     <h1></h1>
-    <h2 id="result">Two-factor failure</h2>
+    <h2 id="result">Two-factor authentication failure</h2>
     <h3>Try again.</h3>
     <p><a href="/login">Login</a></p>
 </body>
