--- a/templates/username_already_exists.html
+++ b/templates/username_already_exists.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>Username already exists</title>
+    <title>Registration Failed</title>
 </head>
 <body>
-    <h1>Username taken!</h1>
+    <h1 id="success">Failure</h1>
     <h2>User with username {{username}} already exists.</h2>
     <h2>Try again.</h2>
     <p><a href="/register">Register</a></p>
