--- a/templates/registration_complete.html
+++ b/templates/registration_complete.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Registration Complete</title>
+    <title>Registration Success</title>
 </head>
 <body>
+    <h1 id="success">Success</h1>
     <h1>You're registered!</h1>
     <h2>Login to continue.</h2>
     <p><a href="/login">Login</a></p>
