Added session handling

--- a/templates/spell_check_results.html
+++ b/templates/spell_check_results.html
@@ -9,5 +9,7 @@
     <p id="textout"/>Entered text: {{ text_to_check }}<p/>
     <p id="misspelled"/>Misspelled words: {{ result }}<p/>
     <p><a href="/spell_check">Start over</a></p>
+    <br><br>
+    <p><a href="/logout">Logout</a></p>
 </body>
 </html>
