--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <p/>
     <form name="login" id="login" action="/login" method="POST">
       Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text'/><p/>
-      Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='text'/><p/>
+      Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='password'/><p/>
       Two-factor Authentication Code: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text'/><p/>
       <button id="loginbutton" type="submit">Login</button>
     </form>
