--- a/templates/register.html
+++ b/templates/register.html
@@ -3,17 +3,20 @@
     <title>Registration</title>
 </head>
 <body>
-    <h1>User Registration</h1>
-    <p/>
+<h1>User Registration</h1>
+<p/>
 
-    <form name="register" id="register" action="/register" method="POST">
-      Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text' required/><p/>
-      Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='text' required/><p/>
-      Cell Phone Number: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text'/><p/>
-      <button id="registerbutton" type="submit">Register</button>
-    </form>
+<form name="register" id="register" action="/register" method="POST">
+    Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text' required/>
     <p/>
-    <h2>Already registered?</h2>
-    <p><a href="/login">Login</a></p>
+    Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='password' required/>
+    <p/>
+    Cell Phone Number: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text'/>
+    <p/>
+    <button id="registerbutton" type="submit">Register</button>
+</form>
+<p/>
+<h2>Already registered?</h2>
+<p><a href="/login">Login</a></p>
 </body>
 </html>
