--- a/templates/registration_complete.html
+++ b/templates/registration_complete.html
@@ -9,5 +9,7 @@
     <h1>You're registered!</h1>
     <h2>Login to continue.</h2>
     <p><a href="/login">Login</a></p>
+    <h2>Register another user.</h2>
+    <p><a href="/register">Register</a></p>
 </body>
 </html>
