--- a/templates/spell_check.html
+++ b/templates/spell_check.html
@@ -5,6 +5,7 @@
     <title>Spell Checker</title>
 </head>
 <body>
+    <h3>Hello, {{ username }}</h3>
     <h1>Spell Checker Tool</h1>
     <h2>Enter the text you would like to check for spelling errors:</h2>
     <p/>
@@ -13,6 +14,7 @@
         <br><br>
       <input type="submit" value="Submit">
     </form>
+    <p><a href="/logout">Logout</a></p>
     <p/>
 </body>
 </html>
